começo da elaboração do rodapé; § os 3 cards já foram feitas ; § uma tag aside foi feita para ser uma linha no final

--- a/css/app/style.css
+++ b/css/app/style.css
@@ -92,3 +92,10 @@ main .banner .card-footer, main .banner .btn{
     font-weight: bold;
     text-transform: uppercase;
 }
+
+.rodape{
+    width: 22rem;   
+    margin-top: 15vh;
+    padding: 0;
+    text-align: center;
+}
