criação do breadcrumbs da webpage noticias.html

--- a/css/app/style.css
+++ b/css/app/style.css
@@ -116,3 +116,16 @@ footer aside p{
     font-size: larger;
     color: #fff;
 }
+
+.breadcrumb{
+    margin-left: 8.6rem;
+    color: #fff;
+    font-size: larger;
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+
+/* NOTÍCIAS WEBPAGE ---------------------------- */
+    
+/* NOTÍCIAS WEBPAGE ---------------------------- */
