foram feitos diversos ajustes nos links do index e das noticias; o curriculo: ajustes na lista de objetivos e no botao cadastrar; § diversos ajustes no style sheet

--- a/css/app/style.css
+++ b/css/app/style.css
@@ -192,6 +192,8 @@ form .cadastrar{
     margin-top: 8vh;
 }
 form .btn{
+    max-width:31rem;
+    min-width: 21rem;
     font-weight: bolder;
     text-transform: uppercase;
 }
