ajustes nos links; § ajustes no rodape do curriculo

--- a/css/app/style.css
+++ b/css/app/style.css
@@ -188,6 +188,9 @@ nav .breadcrumb .active {
 
 
 /* CURRÍCULO WEBPAGE ---------------------------- */
+#curriculo h2{
+    font-size: 3.9rem;
+}
 form .cadastrar{
     margin-top: 8vh;
 }
