--- a/css/app/style.css
+++ b/css/app/style.css
@@ -11,6 +11,9 @@
     text-transform: lowercase;
 }
 
+.navbar-expanded-lg{
+    padding: 0;
+}
 a,
 .card {
     color: #fff;
@@ -18,13 +21,14 @@ a,
 }
 
 .nav-link {
+    display: block;
     font-size: large;
     font-weight: bold;
-    padding-left: 2vw;
+    padding: 3.5rem 1.95rem;
 }
 
 .nav-link:hover {
-    background-color: #f30505;
+    background-color: #cccccc56;
     transition: 0.4s ease-in;
 }
 
